@@ -1,4 +1,6 @@
 2012-0X-XX  UnNetHack X.X.X
+	* Uncursed and blessed scrolls of magic mapping reveal secret doors
+	* Blessed scrolls of magic mapping reveal objects
 	* new dungeon features:
 	  - muddy swamp (from NetHack Brass)
 
